@@ -1,0 +1,12 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Math-String
+version:      1.24
+version_from: lib/Math/String.pm
+installdirs:  site
+requires:
+    Math::BigFloat:                1.41
+    Math::BigInt:                  1.67
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
